--- a/M17_TP01_N02/css/style.css
+++ b/M17_TP01_N02/css/style.css
@@ -159,6 +159,23 @@ div#elements {
     margin: 0 0 11px;
 }
 
+.slide-content {
+    color: white;
+    margin-top: 14%; 
+}
+
+.slide-content p {
+    font-size: 20pt;
+    margin-bottom: 0;
+}
+
+.slide-content a {
+    margin-top: 10px;
+}
+
+.slide-wrapper {
+    margin-top: 4%;
+}
 
 /*********** MOBILE ************/
 @media (max-width: 767px) {
@@ -174,3 +191,5 @@ div#elements {
         width: 100%;
     }
 }
+
+
