--- a/M17_TP01_N02/painel/MasterPagePainel.Master
+++ b/M17_TP01_N02/painel/MasterPagePainel.Master
@@ -1,12 +1,15 @@
 ﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="MasterPagePainel.master.cs" Inherits="M17_TP01_N02.painel.MasterPagePainel" %>
 
+<%@ Import Namespace="M17_TP01_N02.Modal" %>
+<%@ Import Namespace="Newtonsoft.Json.Linq" %>
+
 <!DOCTYPE html>
 
 <html>
 <head runat="server">
     <meta charset="utf-8" />
     <title>OPCS &gt; Venda de Equipamentos Informáticos</title>
-    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="../js/jquery-3.1.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <!--<link rel="stylesheet" href="http://getbootstrap.com/examples/carousel/carousel.css" />-->
@@ -22,10 +25,16 @@
     <form id="form1" runat="server">
         <div id="nav-bar-top">
             <div class="container" style="margin-top: -20px">
-                <div class="col-sm-12">
+                <div class="col-sm-2">
                     <span class="text-center" id="logo">
                         <img src="../images/logo.png" alt="OPCS" class="logo" />
                     </span>
+                </div>
+                <div class="col-md-7">
+                    <h1>A minha conta</h1>
+                </div>
+                <div class="col-md-3">
+                    <h3 class="pull-right text-right">Bem vindo, <% Response.Write(Database.Instance.UserInfo(int.Parse(Session["id"].ToString())).Rows[0][4].ToString()); %>!</h3>
                 </div>
             </div>
         </div>
@@ -43,16 +52,55 @@
                     </div>
                     <div id="navbar" class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="#about">Computadores</a></li>
-                            <li><a href="#contact">Componentes</a></li>
-                            <li><a href="#contact">Periféricos</a></li>
-                            <li><a href="#contact">Armazenamento</a></li>
-                            <li><a href="#contact">Cabos/Adaptadores</a></li>
+                            <li><a href="../index.aspx">Home</a></li>
+                            <%
+                                if (Session["role"] != null && Session["role"].Equals("0")) {
+                            %>
+                            <li
+                                <% 
+                                if (Request["tab"] != null && Request["tab"].Contains("products"))
+                                    Response.Write(" class='active'");
+                                 %>><a href="admin.aspx?tab=products">Produtos</a></li>
+                            <li
+                                <% 
+                                if (Request["tab"] != null && Request["tab"].Contains("brands"))
+                                    Response.Write(" class='active'");
+                                 %>><a href="admin.aspx?tab=brands">Marcas</a></li>
+                            <li
+                                <% 
+                                if (Request["tab"] != null && Request["tab"].Contains("categories"))
+                                    Response.Write(" class='active'");
+                                 %>><a href="admin.aspx?tab=categories">Categorias</a></li>
+                            <li
+                                <% 
+                                if (Request["tab"] != null && Request["tab"].Contains("users"))
+                                    Response.Write(" class='active'");
+                                 %>><a href="admin.aspx?tab=users">Utilizadores</a></li>
+                            <% } else { %>
+
+                            <% } %>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#contact">Sobre</a></li>
-                            <li><a href="login.aspx">Login</a></li>
+                            <li><a href="cart.aspx">Carrinho <%
+                                                                 var listCart = new List<Cart>();
+                                                                 var cookie = Request.Cookies["cart"];
+                                                                 if (cookie != null) {
+                                                                     var cart = cookie.Value;
+                                                                     var element = JArray.Parse(cart);
+                                                                     listCart.AddRange(element.Select(t => new Cart {
+                                                                         Qtd = int.Parse(t["Qtd"].ToString()),
+                                                                         IdProduct = int.Parse(t["IdProduct"].ToString())
+                                                                     }));
+                                                                     Response.Write($"<span class='badge'>{listCart.Count}</span>");
+                                                                 }
+                            %>
+                            </a></li>
+                            <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#"><% Response.Write(Database.Instance.UserInfo(int.Parse(Session["id"].ToString())).Rows[0][1]); %></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="../logout.aspx" style="color: orange !important">Terminar Sessão</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                 </div>
